--- a/foundations/flex/06-flex-layout/index.html
+++ b/foundations/flex/06-flex-layout/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LAYOUT</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <ul class="left-links">
         <li><a href="#">About</a></li>
         <li><a href="#">Store</a></li>
@@ -17,18 +17,22 @@
         <li><a href="#">Profile</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
-    </div>
-    <div class="content">
-      <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
+    </header>
+    <main class="content">
+      <img
+        src="./logo.png"
+        alt="Project logo. Represents odin with the project name."
+        width="600"
+      />
       <div class="input">
-        <input type="text">
+        <input type="text" />
       </div>
       <div class="buttons">
         <button>Do the thing!</button>
         <button>Do the other thing!</button>
       </div>
-    </div>
-    <div class="footer">
+    </main>
+    <footer class="footer">
       <ul class="left-links">
         <li><a href="#">Advertising</a></li>
         <li><a href="#">Business</a></li>
@@ -37,6 +41,6 @@
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Terms</a></li>
       </ul>
-    </div>
+    </footer>
   </body>
 </html>
